# pypq3

./: .flake8  .gitignore  CLAUDE.md  README.md  TODO.md  pyproject.toml
.github/workflows/: tests.yml
examples/: basic_usage.py  simple_demo.py  working_demo.py
src/pypq3/: __init__.py  core.py  crypto.py  exceptions.py  protocol.py  ratchet.py
tests/: test_core.py  test_crypto.py  test_protocol.py  test_ratchet.py
